# waymo-e2e-challenge

./: .gitignore  BUILD.bazel  MODULE.bazel  gen_python_path.py  requirements_lock.txt  vscode_import_generator.py
src/python/: BUILD.bazel  main.py
src/python/data/: BUILD.bazel
src/python/models/: BUILD.bazel
src/python/waymo_open_dataset/protos/: BUILD.bazel  dataset.proto  end_to_end_driving_data.proto  end_to_end_driving_submission.proto  keypoint.proto  label.proto
