load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

compile_pip_requirements(
    name = "requirements",
    src = "requirements.in",
    requirements_txt = "requirements_lock.txt"
)

py_binary(
    name = "vscode_import_generator",
    srcs = ["vscode_import_generator.py"],
    deps = [
        "//src/python/models:models",
        "//src/python/data:data",
        "//src/python/waymo_open_dataset/protos:protos_lib",
        requirement("torch"),
        requirement("torchvision"),
        requirement("tensorflow"),
    ],
)
